--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,9 @@
 
 <!-- styles block -->
 
-{% block styles%} {{super()}}
-<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}" />
-
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 {% endblock %}
 <!-- content block -->
 {% block content %}
