--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,4 +1,8 @@
 {% extends 'base.html'%}
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/movie.css')}}">
+{% endblock %}
 <!-- content block -->
 {% block content%}
 <div class="container">
@@ -6,7 +10,7 @@
 	<div class="row">
 		<div
 			class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath"
-			style="background: url(http://image.tmdb.org/t/p/w500/{{movie.poster}}) no-repeat center center"
+			style="background: url(http://image.tmdb.org/t/p/w500{{movie.poster}}) no-repeat center center"
 		></div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
 			<h3>{{ movie.title }}</h3>
