ft:applied the application structure

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -3,9 +3,26 @@ ul {
 }
 .movie-card a {
 	color: green;
-	font-size: 1.4rem;
+	font-size: 1.8rem;
 }
 .movie-card a:hover {
 	padding-bottom: 20px;
 	border-bottom: 1px solid green;
+}
+
+.box-containerr h3{
+	font-size: 3.4rem;
+	font-weight: bold;
+	text-align: center;
+}
+.box{
+	display: flex;
+	flex-wrap: wrap;
+}
+.movie-card{
+	flex: 1 1 25rem;
+	overflow: hidden;
+}
+.movie-card img:hover{
+	transform: scale(1.1);
 }
