--- a/app/static/css/movie.css
+++ b/app/static/css/movie.css
@@ -3,6 +3,7 @@
     padding-bottom: 40%;
     padding-top: 30%;
     background-size: cover;
+    object-fit: cover;
 }
 .movie-details
 {
@@ -28,4 +29,12 @@ p
     text-align: right;
     color: green;
 
+}
+.review-card h2
+{
+    color: green;
+    text-transform: capitalize;
+    text-align: center;
+    border-bottom: 1px solid green;
+    padding-bottom: 10px;
 }
