--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,7 +1,10 @@
 {% extends 'base.html'%}
-{% block styles%}
-    {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='css/movie.css')}}">
+ {% import 'macros.html' as macro%} 
+
+ <!-- Styles block -->
+ {% block styles%} 
+ {{super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/movie.css')}}" />
 {% endblock %}
 <!-- content block -->
 {% block content%}
@@ -10,7 +13,7 @@
 	<div class="row">
 		<div
 			class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath"
-			style="background: url(http://image.tmdb.org/t/p/w500{{movie.poster}}) no-repeat center center"
+			style="background: url({{movie.poster}}) no-repeat center center"
 		></div>
 		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
 			<h3>{{ movie.title }}</h3>
@@ -18,7 +21,25 @@
 			<p class="ratings">
 				<b> {{ movie.vote_average }}</b> - <i>{{ movie.vote_count}}votes</i>
 			</p>
+			<a href="/movie/review/new/{{movie.id}}" class="ratings"
+				>Write a new review</a
+			>
 		</div>
+	</div>
+	<div class="row">
+		<h1>Reviews</h1>
+		<hr />
+
+		{% if reviews %} 
+			{{macro.displayReviews(reviews)}} 
+		{%else%}
+		<h3 class="text-center">This movie has no reviews</h3>
+		<a
+			href="/movie/review/new/{{movie.id}}"
+			class="btn btn-success btn-lg text-centre"
+		>Write a new review
+		</a><br><br>
+		{% endif %}
 	</div>
 </div>
 {% endblock %}
